Fixed wrapping for header image

--- a/website/src/assets/scss/App.css
+++ b/website/src/assets/scss/App.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Sulphur+Point:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Sulphur+Point:wght@400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=MuseoModerno&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=NTR&display=swap");
 .box-shadow {
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
@@ -25,7 +27,7 @@
 }
 
 .title, .title--white {
-  font-family: "MuseoModerno", sans-serif;
+  font-family: 'MuseoModerno', sans-serif;
   font-size: 36px;
   font-weight: 400;
   color: inherit;
@@ -36,19 +38,16 @@
 }
 
 .subtitle {
-  font-family: "MuseoModerno", sans-serif;
+  font-family: 'MuseoModerno', sans-serif;
   font-size: 22px;
   color: inherit;
 }
 
-.text, .text--gray, #why-join-section--list-text, .info-card--text {
-  font-family: "MuseoModerno", sans-serif;
-  font-size: 18px;
+.text, #why-join-section--list-text, .info-card--text {
+  font-family: 'NTR', sans-serif;
+  font-size: 20px;
+  line-height: 0.8cm;
   color: inherit;
-}
-
-.text--gray {
-  color: #414141;
 }
 
 @media only screen and (max-width: 600px) {
@@ -58,7 +57,7 @@
   .subtitle {
     text-align: center;
   }
-  .text, .text--gray, #why-join-section--list-text, .info-card--text {
+  .text, #why-join-section--list-text, .info-card--text {
     font-size: 1.25rem;
   }
 }
@@ -83,6 +82,7 @@
   position: absolute;
   width: 27.5vw;
   height: 27.5vh;
+  top: 32.5%;
   right: 10%;
 }
 
@@ -148,11 +148,15 @@
   width: 250px;
   margin: 20px;
   float: left;
+  -webkit-transition: -webkit-box-shadow 0.2s ease;
+  transition: -webkit-box-shadow 0.2s ease;
+  transition: box-shadow 0.2s ease;
+  transition: box-shadow 0.2s ease, -webkit-box-shadow 0.2s ease;
 }
 
 .info-card--title {
   position: relative;
-  font-family: "MuseoModerno", sans-serif;
+  font-family: 'MuseoModerno', sans-serif;
   font-size: 26px;
   text-align: center;
   color: black;
