--- a/website/src/assets/scss/_home.scss
+++ b/website/src/assets/scss/_home.scss
@@ -26,6 +26,7 @@
     width: 27.5vw;
     height: 27.5vh;
 
+    top: 32.5%;
     right: 10%;
 }
 
@@ -102,10 +103,12 @@
 
     float: left;
 
+    transition: box-shadow 0.2s ease;
+
     &--title {
         position: relative;
 
-        font-family: $font-family;
+        font-family: 'MuseoModerno', sans-serif;
         font-size: 26px;
         text-align: center;
 
